crates/strider-analyze/tests/snapshots/v3__ppc32be__calling_convention__forward_8.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x10000554:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "9" -> "1" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "10" -> "1" [color="#ff8800", label=arg6, fontcolor="#cccccc", fontsize=9];
  "11" -> "1" [color="#ff8800", label=arg7, fontcolor="#cccccc", fontsize=9];
  "12" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v14" [color="#888888", style=dashed];
  "v14" -> "12" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v15" [color="#888888", style=dashed];
  "v15" -> "12" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "v16" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v16" [color="#888888", style=dashed];
  "v16" -> "12" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "13" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "18" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "19" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "22" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "23" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "24" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "26" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "27" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "27" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "28" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0xffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "30" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "32" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0xffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "30" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "34" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "36" -> "35" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "36" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0xffffffe4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "38" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "40" -> "39" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "40" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0xffffffe0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "38" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "42" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "44" -> "43" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "44" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0xffffffdc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "42" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "42" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "46" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="const 0xffffffd8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="init\nr10", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nr9", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\nr8", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="init\nr7", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="init\nr6", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="init\nr5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="init\nr3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "48" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "49" -> "2" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0x10020020:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "48" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "50" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "51" -> "48" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x10020020:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "48" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "50" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "52" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "53" -> "50" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x10020020:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" -> "50" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "52" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "54" -> "52" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "55" -> "52" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x10020020:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "52" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "54" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "56" -> "54" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "57" -> "54" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x10020020:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "54" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "56" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "58" -> "56" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "59" -> "56" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "59" [label="const 0x10020020:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "56" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "58" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "60" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "61" -> "58" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0x10020020:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "58" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "60" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "62" -> "60" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "63" -> "60" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0x10020020:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "60" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "62" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "64" -> "62" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v65" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v65" -> "62" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "62" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "64" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "66" -> "64" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v67" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v67" -> "64" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "10" -> "64" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "66" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "68" -> "66" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v69" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v69" -> "66" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "66" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "68" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "70" -> "68" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v71" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v71" -> "68" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "8" -> "68" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "70" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "72" -> "70" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v73" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v73" -> "70" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "7" -> "70" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "72" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "74" -> "72" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v75" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v75" -> "72" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "6" -> "72" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "74" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "76" -> "74" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v77" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v77" -> "74" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "5" -> "74" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "76" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "78" -> "76" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v79" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v79" -> "76" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "4" -> "76" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "78" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "80" -> "78" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v81" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v81" -> "78" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "82" -> "78" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "82" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "80" [label="StackStore u32\n→ ram[sp + 4]", shape=box3d, fillcolor="#20182a"];
  "83" -> "80" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v84" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v84" -> "80" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "85" -> "80" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "85" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "83" [label="StackStore u32\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "86" -> "83" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v87" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v87" -> "83" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "20" -> "83" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "86" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
